# cch_his_auto

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
src/cch_his_auto/: __init__.py  common_structs.py  driver.py  global_db.py  helper.py  main.py  structs.py
src/cch_his_auto/app/: __init__.py  build.spec  global_db.py  main.py  patient_db.py  test.py
src/cch_his_auto/app/common/: username_password.py
src/cch_his_auto/app/common_tasks/: navigation.py  signature.py
src/cch_his_auto/app/common_ui/: scrollable_frame.py  staff_info.py
src/cch_his_auto/app/khambenhmoingay/: __init__.py  bbhc.py  bbhc_list.py  bienbanhoichan_tab.py  config.py  dutrumau.py  dutrumau_list.py  more_listframe.py  patient_list.py  tabbed_listframe.py  todieutri.py  todieutri_tab.py
src/cch_his_auto/app/kiemtrahoso/: __init__.py  check_cannang_chieucao.py  check_thongtinxv.py  common.py  common_tasks.py  config.py  dinhduong.py  nhommau.py  thongtinxv.py
src/cch_his_auto/app/kiemtrahosocu/: __init__.py  config.py
src/cch_his_auto/app/kiemtrahosotoankhoa/: __init__.py  config.py  dinhduong.py  kytenhosobenhan.py  nhommau.py  thongtinxv.py
src/cch_his_auto/app/kiemtraxuatvien/: __init__.py  config.py  thongtinxv.py
src/cch_his_auto/app/kybangkexuatvien/: __init__.py  config.py
src/cch_his_auto/app/kytodieutrihangngay/: __init__.py  config.py  patient_list.py
src/cch_his_auto/common_tasks/: navigation.py  signature.py
src/cch_his_auto/common_ui/: button_frame.py  item_listframe.py  staff_info.py  user_frame.py
src/cch_his_auto/tasks/: __init__.py  auth.py  common.py  danhsachnguoibenhnoitru.py  editor_sign_name.py
(+40 files in other folders)
