[project]
name = "cch_his_auto"
version = "0.1.0"
description = "Automate your HIS workflow at CCH "
readme = "README.md"
authors = [{ name = "vuongkienthanh", email = "thanhstardust@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.29.0",
    "validators>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.uv]
package = true

[dependency-groups]
build = [
    "pyinstaller>=6.12.0",
]
dev = [
    "pdoc>=15.0.1",
]
