[project]
name = "cch_his_auto"
version = "1.0.3"
description = "Automate your HIS workflow at CCH"
readme = "README.md"
authors = [{ name = "vuongkienthanh", email = "thanhstardust@outlook.com" }]
requires-python = ">=3.14"
dependencies = ["cch_his_auto_lib", "rich>=14.1.0", "validators>=0.34.0"]

[dependency-groups]
build = ["pyinstaller>=6.12.0"]

[tool.uv.sources]
cch_his_auto_lib = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = true

[project.scripts]
cch_his_auto = "cch_his_auto:run"
